--- a/src/Limitless/KarhabtiBundle/Resources/views/Pack/afficheClient.html.twig
+++ b/src/Limitless/KarhabtiBundle/Resources/views/Pack/afficheClient.html.twig
@@ -22,8 +22,8 @@
                                     <li ><a href="{{ path('limitless_karhabti_Client_homepage') }}">home</a>
                                     </li>
                                     <li><a href="{{ path('client_index') }}">Profil</a></li>
-                                    <li class="active"><a href="{{ path('client_offre_index') }}">Offre</a></li>
-                                    <li ><a href="{{ path('client_pack_index') }}">Pack</a></li>
+                                    <li ><a href="{{ path('client_offre_index') }}">Offre</a></li>
+                                    <li class="active"><a href="{{ path('client_pack_index') }}">Pack</a></li>
                                     <li><a href="#">Cour/Examen<i class="icofont icofont-simple-down"></i></a>
                                         <ul>
                                             <li><a href="{{ path('client_cours_index') }}">Cour</a></li>
@@ -58,7 +58,7 @@
             <!-- Section Title -->
             <div class="row">
                 <div class="section-title text-center col-xs-12 mb-45">
-                    <h3 class="heading">Liste des Offres</h3>
+                    <h3 class="heading">Liste des Packs</h3>
                     <div class="excerpt">
                     </div>
                     <i class="icofont icofont-traffic-light"></i>
@@ -83,44 +83,36 @@
                 </style>
 
 
-
-
                 <div class="row">
+                    {% for modele in modeles %}
 
-                    <div id="course-area" class="course-area  pt-90 pb-60">
-                        <div class="container">
-                            {% for modele in modeles %}
+                        <div class="col-md-3 col-sm-6 col-xs-12 mb-30">
+                            <div class="single-pricing text-center" style=" background-color: #bebebe;">
 
-                                <!-- Course Wrapper -->
-                                <div class="col-md-3 col-sm-6 col-xs-12  mb-30 fix">
-                                    <div class="course-item text-center">
-                                        {% if(modele.vehicule.typeV == "Voiture") %}
-                                            <i class="icofont icofont-car-alt-4"></i>
-
-                                        {% elseif (modele.vehicule.typeV == "Moto")%}
-                                            <i class="icofont icofont-motor-bike"></i>
-
-                                        {% elseif (modele.vehicule.typeV == "Bus") %}
-                                            <i class="icofont icofont-bus"></i>
-
-                                        {% elseif (modele.vehicule.typeV == "Pois Lourd") %}
-                                            <i class="icofont icofont-fast-delivery"></i>
-                                        {% endif %}
-                                        <h4><a style="text-transform: uppercase;"
-                                               href="{{ path('responsable_offre_show', { 'id': modele.id }) }}">
-                                                <b>{{ modele.nom }}</b></a></h4>
-                                        <p>
-                                            Prix unitaire code : {{ modele.prixUcode }}<br>
-                                            Prix unitaire conduite : {{ modele.prixUconduite }}<br>
-                                            Description : {{ modele.description }}
-                                        </p>
-                                    </div>
+                                {% set counter =counter + 1 %}
+                                <div class="pricing-head">
+                                    <h4><a style="text-transform: uppercase;"
+                                           href="{{ path('responsable_offre_show', { 'id': modele.id }) }}">
+                                            <b>{{ modele.nom }}</b></a></h4>
                                 </div>
+                                <div class="pricing-price">
+                                    <h2><span>dt</span>{{ modele.prixtotal }}</h2>
+                                </div>
+                                <ul class="pricing-details">
+                                    <li>Agence : {{ modele.agence.nom }}</li>
+                                    <li>Nombre d'heure de code : {{ modele.nbrHeureCode }}</li>
+                                    <li>Prix unitaire code : {{ modele.prixUcode }}</li>
+                                    <li>Nombre d'heure de conduite : {{ modele.nbrHeureConduite }}</li>
+                                    <li>Prix unitaire conduite : {{ modele.prixUconduite }}</li>
+                                    <li>Description : {{ modele.description }}</li>
+                                </ul>
+                                <a class="pricing-action" href="{{ path('responsable_offre_show',{'id':modele.id}) }}">Voir
+                                    l'offre en details</a>
 
-                            {% endfor %}
-
+                            </div>
                         </div>
-                    </div>
+
+                    {% endfor %}
                 </div>
 
 
