--- a/src/Limitless/KarhabtiBundle/Resources/views/Vehicule/list.html.twig
+++ b/src/Limitless/KarhabtiBundle/Resources/views/Vehicule/list.html.twig
@@ -2,65 +2,69 @@
 {% block title %}
     {{ parent() }}
 {% endblock %}
-{% block body%}
+{% block body %}
     {% set myVal = 0 %}
     {% for vehicule in vehicule %}
-        {% set difference = date(vehicule.dateExpirationAssurance).diff(date('now'))   %}
+        {% set difference = date(vehicule.dateExpirationAssurance).diff(date('now')) %}
         {% set leftDays = difference.days %}
 
-        {% set difference1 = date(vehicule.dateExpirationVisite).diff(date('now'))   %}
+        {% set difference1 = date(vehicule.dateExpirationVisite).diff(date('now')) %}
         {% set leftDays1 = difference1.days %}
 
-        {% set difference2 = date(vehicule.dateExpirationVignette).diff(date('now'))   %}
+        {% set difference2 = date(vehicule.dateExpirationVignette).diff(date('now')) %}
         {% set leftDays2 = difference2.days %}
 
         {% if (leftDays <= 5) or (leftDays1<= 5) or (leftDays2<= 5) %}
             {% set myVal = myVal + 1 %}
-            {% endif %}
+        {% endif %}
 
 
-            {% endfor %}
+    {% endfor %}
     <!-- Header 1
  ============================================ -->
-        <div class="header-bottom-2 sticky">
-            <div class="container">
-                <div class="row">
-                    <!-- Header Bottom -->
-                    <div class="col-xs-12">
-                        <div class="navbar-header">
-                            <a href="{{ path('limitless_karhabti_homepage') }}" class="logo navbar-brand"><img id="logo_img" src="{{ asset('bundles/limitlesskarhabti/img/logo/color-1.png')}}" alt="logo" /></a>
-                        </div>
-                        <div class="main-menu menu-style-6 mean-menu float-right">
-                            <nav>
-                                <ul>
-                                    <li><a href="{{ path('limitless_karhabti_homepage') }}">home</a></li>
-                                    <li ><a href="{{ path('agence_index') }}">Profil</a></li>
-                                    <li ><a href="#">Offre/Pack<i class="icofont icofont-simple-down"></i></a>
-                                        <ul>
-                                            <li><a href="{{ path('responsable_offre_index') }}">Offre</a></li>
-                                            <li><a href="{{ path('limitless_karhabti_responsable_reservationoffre') }}">Réservation Offre</a></li>
-                                            <li><a href="{{ path('responsable_pack_index') }}">Pack</a></li>
-                                            <li><a href="{{ path('limitless_karhabti_responsable_reservationpack') }}">Réservation Pack</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="active"><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a></li>
-                                    <li ><a href="{{ path('moniteur_reponsable_index') }}">Moniteur</a></li>
-                                    <li ><a href="{{ path('reponsable_tache_index') }}">Planning</a></li>
-                                    <li ><a href="#">Cour/Examen<i class="icofont icofont-simple-down"></i></a>
-                                        <ul>
-                                            <li ><a href="{{ path('responsable_cours_List') }}">Cour</a></li>
-                                            <li ><a href="{{ path('responsable_examen_Liste') }}">Examen</a></li>
-                                        </ul>
-                                    </li>
-                                    <li ><a href="{{ path('limitless_karhabti_mail') }}">contact</a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                        <div class="mobile-menu"></div>
+    <div class="header-bottom-2 sticky">
+        <div class="container">
+            <div class="row">
+                <!-- Header Bottom -->
+                <div class="col-xs-12">
+                    <div class="navbar-header">
+                        <a href="{{ path('limitless_karhabti_homepage') }}" class="logo navbar-brand"><img id="logo_img"
+                                                                                                           src="{{ asset('bundles/limitlesskarhabti/img/logo/color-1.png') }}"
+                                                                                                           alt="logo"/></a>
                     </div>
+                    <div class="main-menu menu-style-6 mean-menu float-right">
+                        <nav>
+                            <ul>
+                                <li><a href="{{ path('limitless_karhabti_homepage') }}">home</a></li>
+                                <li><a href="{{ path('agence_index') }}">Profil</a></li>
+                                <li><a href="#">Offre/Pack<i class="icofont icofont-simple-down"></i></a>
+                                    <ul>
+                                        <li><a href="{{ path('responsable_offre_index') }}">Offre</a></li>
+                                        <li><a href="{{ path('limitless_karhabti_responsable_reservationoffre') }}">Réservation
+                                                Offre</a></li>
+                                        <li><a href="{{ path('responsable_pack_index') }}">Pack</a></li>
+                                        <li><a href="{{ path('limitless_karhabti_responsable_reservationpack') }}">Réservation
+                                                Pack</a></li>
+                                    </ul>
+                                </li>
+                                <li class="active"><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a></li>
+                                <li><a href="{{ path('moniteur_reponsable_index') }}">Moniteur</a></li>
+                                <li><a href="{{ path('reponsable_tache_index') }}">Planning</a></li>
+                                <li><a href="#">Cour/Examen<i class="icofont icofont-simple-down"></i></a>
+                                    <ul>
+                                        <li><a href="{{ path('responsable_cours_List') }}">Cour</a></li>
+                                        <li><a href="{{ path('responsable_examen_Liste') }}">Examen</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="{{ path('limitless_karhabti_mail') }}">contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="mobile-menu"></div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <!-- Banner -->
     <div class="page-banner-area overlay overlay-black overlay-70">
@@ -104,104 +108,107 @@
 
                 <ul>
                     <li style="text-align: center">
-                       <button><a  class="btn color "  href="{{ path('responsable_vehicule_new') }}">créer un nouveau vehicule</a></button>
+                        <button><a class="btn color " href="{{ path('responsable_vehicule_new') }}">créer un nouveau
+                                vehicule</a></button>
                     </li>
                 </ul>
 
                 <form method="POST" style="padding-bottom: 2%;padding-top: 2%;padding-left: 1.7%">
-                    <h3>Rechercher : <input  placeholder="Matricule" type="text" name="matricule">
-                    <input  type="submit" value="Recherche"></h3>
+                    <h3>Rechercher : <input placeholder="Matricule" type="text" name="matricule">
+                        <input type="submit" value="Recherche"></h3>
                 </form>
-            {% if myVal>0 %}
-            <h4 style="color: red;text-align: center">Vous avez {{ myVal }} véhicule(s) où la date d'expiration de (Assurance, Vignette ou Visite) qui va expirer bientôt !!!</h4>
-            {% endif %}
+                {% if myVal>0 %}
+                    <h4 style="color: red;text-align: center">Vous avez {{ myVal }} véhicule(s) où la date d'expiration
+                        de (Assurance, Vignette ou Visite) qui va expirer bientôt !!!</h4>
+                {% endif %}
                 {% for vehicule in vehicule %}
-                <div id="offre">
+                    <div id="offre">
 
-                    <div class="col-md-4" >
+                        <div class="col-md-4">
 
-                <div class="thumbnail" align="center" style="background-color: ghostwhite">
+                            <div class="thumbnail" align="center" style="background-color: ghostwhite">
 
-                    <h1 style="color: #efe24b"><a style="text-transform: uppercase;" href="{{ path('responsable_vehicule_show', { 'id': vehicule.id }) }}"> <b>{{ vehicule.matricule }}</b></a><br></h1>
+                                <h1 style="color: #efe24b"><a style="text-transform: uppercase;"
+                                                              href="{{ path('responsable_vehicule_show', { 'id': vehicule.id }) }}">
+                                        <b>{{ vehicule.matricule }}</b></a><br></h1>
 
-                    <label>Type Vehicule : </label>{{ vehicule.typeV }} <br>
-                    <label>Marque :</label> {{ vehicule.marque }} <br>
-                    <label>Modele :</label> {{ vehicule.modele }}<br>
-
-
-                    {% set difference = date(vehicule.dateExpirationAssurance).diff(date('now'))   %}
-                    {% set leftDays = difference.days %}
-
-                    {% if leftDays <= 5 %}
-                        {% set myVal = myVal + 1 %}
-
-                        <label>Date d'expiration de l'assurance :</label>
-                        <h5 style="color: red">Assurance Expirera bientôt !!</h5>
-                            {% if vehicule.dateExpirationAssurance %}{{ vehicule.dateExpirationAssurance|date('Y-m-d') }}{% endif %}
-
-                    {% else %}
-                        <label>Date d'expiration de l'assurance :</label>
-                        <h5 style="color: ghostwhite">fdsfdsf</h5>
-                            {% if vehicule.dateExpirationAssurance %}{{ vehicule.dateExpirationAssurance|date('Y-m-d') }}{% endif %}
-
-                    {% endif %}
-                    <br>
+                                <label>Type Vehicule : </label>{{ vehicule.typeV }} <br>
+                                <label>Marque :</label> {{ vehicule.marque }} <br>
+                                <label>Modele :</label> {{ vehicule.modele }}<br>
 
 
-                    {% set difference = date(vehicule.dateExpirationVignette).diff(date('now'))   %}
-                    {% set leftDays = difference.days %}
+                                {% set difference = date(vehicule.dateExpirationAssurance).diff(date('now')) %}
+                                {% set leftDays = difference.days %}
 
-                    {% if leftDays <= 5 %}
-                        {% set myVal = myVal + 1 %}
-                        <label>Date d'expiration de la vignette :</label>
-                        <h5 style="color: red">Vignette Expirera bientôt !!</h5>
+                                {% if leftDays <= 5 %}
+                                    {% set myVal = myVal + 1 %}
 
+                                    <label>Date d'expiration de l'assurance :</label>
+                                    <h5 style="color: red">Assurance Expirera bientôt !!</h5>
+                                    {% if vehicule.dateExpirationAssurance %}{{ vehicule.dateExpirationAssurance|date('Y-m-d') }}{% endif %}
 
+                                {% else %}
+                                    <label>Date d'expiration de l'assurance :</label>
+                                    <h5 style="color: ghostwhite">fdsfdsf</h5>
+                                    {% if vehicule.dateExpirationAssurance %}{{ vehicule.dateExpirationAssurance|date('Y-m-d') }}{% endif %}
 
-                            {% if vehicule.dateExpirationVignette %}{{ vehicule.dateExpirationVignette|date('Y-m-d') }}{% endif %}
-
-                    {% else %}
-                        <label>Date d'expiration de la vignette :</label>
-                        <h5 style="color: ghostwhite">fdsfdsf</h5>
-
-                            {% if vehicule.dateExpirationVignette %}{{ vehicule.dateExpirationVignette|date('Y-m-d') }}{% endif %}
-
-                    {% endif %}
-                    <br>
+                                {% endif %}
+                                <br>
 
 
-                    {% set difference = date(vehicule.dateExpirationVisite).diff(date('now'))   %}
-                    {% set leftDays = difference.days %}
+                                {% set difference = date(vehicule.dateExpirationVignette).diff(date('now')) %}
+                                {% set leftDays = difference.days %}
 
-                    {% if leftDays <= 5 %}
-                        {% set myVal = myVal + 1 %}
-                        <label>Date d'expiration de la visite :</label>
-                        <h5 style="color: red">Vignette Expirera bientôt !!</h5>
+                                {% if leftDays <= 5 %}
+                                    {% set myVal = myVal + 1 %}
+                                    <label>Date d'expiration de la vignette :</label>
+                                    <h5 style="color: red">Vignette Expirera bientôt !!</h5>
 
 
 
-                            {% if vehicule.dateExpirationVisite %}{{ vehicule.dateExpirationVisite|date('Y-m-d') }}{% endif %}
+                                    {% if vehicule.dateExpirationVignette %}{{ vehicule.dateExpirationVignette|date('Y-m-d') }}{% endif %}
 
-                    {% else %}
-                        <label>Date d'expiration de la visite :</label>
-                        <h5 style="color: ghostwhite">fdsfdsf</h5>
+                                {% else %}
+                                    <label>Date d'expiration de la vignette :</label>
+                                    <h5 style="color: ghostwhite">fdsfdsf</h5>
 
-                            {% if vehicule.dateExpirationVisite %}{{ vehicule.dateExpirationVisite|date('Y-m-d') }}{% endif %}
+                                    {% if vehicule.dateExpirationVignette %}{{ vehicule.dateExpirationVignette|date('Y-m-d') }}{% endif %}
 
-                    {% endif %}
-                    <br>
-
-
+                                {% endif %}
+                                <br>
 
 
+                                {% set difference = date(vehicule.dateExpirationVisite).diff(date('now')) %}
+                                {% set leftDays = difference.days %}
 
-                    <button style="margin-bottom: 2%;margin-top: 2%" >
-                        <a  class="btn color " href="{{ path('responsable_vehicule_show', { 'id': vehicule.id }) }}">Voir les details de la voiture</a>
-                    </button>
-                </div>
+                                {% if leftDays <= 5 %}
+                                    {% set myVal = myVal + 1 %}
+                                    <label>Date d'expiration de la visite :</label>
+                                    <h5 style="color: red">Vignette Expirera bientôt !!</h5>
+
+
+
+                                    {% if vehicule.dateExpirationVisite %}{{ vehicule.dateExpirationVisite|date('Y-m-d') }}{% endif %}
+
+                                {% else %}
+                                    <label>Date d'expiration de la visite :</label>
+                                    <h5 style="color: ghostwhite">fdsfdsf</h5>
+
+                                    {% if vehicule.dateExpirationVisite %}{{ vehicule.dateExpirationVisite|date('Y-m-d') }}{% endif %}
+
+                                {% endif %}
+                                <br>
+
+
+                                <button style="margin-bottom: 2%;margin-top: 2%">
+                                    <a class="btn color "
+                                       href="{{ path('responsable_vehicule_show', { 'id': vehicule.id }) }}">Voir les
+                                        details de la voiture</a>
+                                </button>
+                            </div>
                         </div>
                     </div>
-            {% endfor %}
+                {% endfor %}
 
             </div>
 
